--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -681,7 +681,7 @@ section {
 
 /* effect prev click */
 .carousel.prev .list .item:nth-child(2) {
-  z-index: 2;
+  z-index: 2;  
 }
 
 .carousel.prev .list .item:nth-child(2) img {
@@ -1093,7 +1093,7 @@ footer {
 }
 }
  
-
+ 
 /*----------------------*\
 ¦----NAVBAR-ICON-SWITCH--¦
 \*----------------------*/
@@ -1115,14 +1115,11 @@ footer {
     display: block;
   }
 
-
-
-
-
-
-
-
 }
+
+
+
+
 
 /*--------------------------------------------*\
 ¦---LANDSCAPE-MOBILE-MENU-SCROLL-MEDIA-QUERY---¦
@@ -1218,6 +1215,20 @@ footer {
     width: 50%;
   }
 
+/*------------------------------*\
+¦---CAROUSEL-LIST-ITEM-CONTENT---¦
+\*------------------------------*/
+.carousel .list .item .content {
+  position: absolute;
+  top: 20%;
+  width: 550px;
+  max-width: 80%;
+  left: 50%;
+  transform: translateX(-50%);
+  color: var(--secondary-color);
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 1.5);
+}
+
     /*------------------------------------*\
 ¦---CAROUSEL-LIST-ITEM-CONTENT-TITLE---¦
 \*------------------------------------*/
@@ -1282,16 +1293,8 @@ letter-spacing: 0px;
 ¦---CAROUSEL-THUMBNAIL-CLASSES---¦
 \*------------------------------*/
 
-.thumbnail {
-  position: absolute;
-  bottom: 40px;
-  left: 15%;
-  width: max-content;
-  z-index: 2;
-  display: flex;
-  gap: 20px;
-}
-.thumbnail .item {
+
+/* .thumbnail .item {
   width: 160px;
   height: 220px;
   flex-shrink: 0;
@@ -1313,7 +1316,7 @@ letter-spacing: 0px;
     left: 50%;
     bottom: 40px;
   }
-}
+} */
 
 
 }
@@ -1491,13 +1494,6 @@ letter-spacing: 0px;
     color: var(--primary-color);
   }
 
-  .arrows {
-  
-    position: absolute;
-    bottom: 130px;
-    right: 55%;
-  
-  }
 }
 
 @media (min-width: 1024px) {
@@ -1506,18 +1502,8 @@ letter-spacing: 0px;
     margin: 0 auto;
   }
 
-  .thumbnail {
-    position: absolute;
-    bottom: 40px;
-    left: 50%;
-    transform: translateX(-50%);
-    width: max-content;
-    z-index: 2;
-    display: flex;
-    gap: 20px;
-  }
 
-    /*------------------------------*\
+/*------------------------------*\
 ¦---CAROUSEL-LIST-ITEM-CONTENT---¦
 \*------------------------------*/
 .carousel .list .item .content {
@@ -1600,7 +1586,8 @@ letter-spacing: 0px;
     height: 100%;
     opacity: 0.7;
     z-index: 1;
-  }
+
+
 
   /*--------------------*\
 ¦---CONTAINER-SIZING---¦
@@ -1626,15 +1613,8 @@ letter-spacing: 0px;
     width: auto;
   }
 
-  
-
- .arrows {
-  position: absolute;
-  bottom: 130px;
-  right: 55%;
 }
 }
-
 /*  Deskstop Screen Size */
 @media (min-width: 1800px) {
   /*--------------------*\
