--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1072,9 +1072,9 @@ footer {
 ¦---CAROUSEL-THUMBNAIL-CLASSES---¦
 \*------------------------------*/
 
-/* .thumbnail {
+.thumbnail {
   bottom: 70px;
-} */
+}
 
 @keyframes outImage {
   to {
